<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/background_gradient"
    android:padding="32sp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create"
        android:textSize="28sp"
        android:textStyle="bold"
        android:textColor="#fff"
        android:layout_marginBottom="8sp" />

    <TextView
        android:id="@+id/tvStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/init"
        android:textSize="13sp"
        android:textColor="#aaa"
        android:layout_marginBottom="32sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginBottom="24sp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pin2"
            android:textSize="16sp"
            android:textColor="#aaa" />

        <TextView
            android:id="@+id/tvPin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="36sp"
            android:textStyle="bold"
            android:textColor="#BA3406"
            android:letterSpacing="0.3" />
    </LinearLayout>

    <!-- Liste joueurs -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/playersInRoom"
        android:textSize="14sp"
        android:textColor="#aaa"
        android:layout_marginBottom="8sp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvPlayers"
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="1"
        android:layout_marginBottom="16sp" />

    <Button
        android:id="@+id/btnStart"
        android:layout_width="220sp"
        android:layout_height="56sp"
        android:text="Lancer la partie"
        android:textColor="#fff"
        android:backgroundTint="#000" />
</LinearLayout>
