<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20sp">

        <ImageButton
            android:id="@+id/btnProfile"
            android:layout_width="48sp"
            android:layout_height="48sp"
            android:layout_gravity="end"
            android:background="@drawable/circle_background"
            android:contentDescription="Profil"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_profile_placeholder" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24sp">

        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="32sp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logo"
            android:textSize="32sp"
            android:textStyle="bold"
            android:textColor="#fff"
            android:layout_marginBottom="12sp" />

        <Button
            android:id="@+id/btnGo"
            android:layout_width="220sp"
            android:layout_height="56sp"
            android:text="@string/soloGame"
            android:textSize="16sp"
            android:textColor="#fff"
            android:backgroundTint="#000" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textMultiplayer"
            android:textColor="#999"
            android:textSize="13sp"
            android:layout_marginTop="30dp" />

        <Button
            android:id="@+id/btnHost"
            android:layout_width="220sp"
            android:layout_height="56sp"
            android:text="@string/create"
            android:textColor="#fff"
            android:backgroundTint="#000"
            android:layout_marginBottom="12sp" />

        <Button
            android:id="@+id/btnJoin"
            android:layout_width="220sp"
            android:layout_height="56sp"
            android:text="@string/soloGame"
            android:textColor="#fff"
            android:backgroundTint="#000" />

        <Button
            android:id="@+id/btnGitHub"
            android:layout_width="220sp"
            android:layout_height="56sp"
            android:layout_marginTop="120sp"
            android:text="GitHub"
            android:textColor="#fff"
            android:backgroundTint="#000" />
    </LinearLayout>

    <!-- Overlay du profil-->
    <FrameLayout
        android:id="@+id/profileContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</FrameLayout>
